# adversarial-ml-lab

./: .coverage  .gitignore  ATTACK_IMPLEMENTATION_STATUS.md  CHANGELOG.md  Dockerfile  Dockerfile.sandbox  NOVELTY.md  README.md  SECURITY.md  benchmark_verify.py  pyproject.toml  requirements-lock.txt  test_navigator.py
.agents/tasks/task-adversarial-ml-complete/features/: FEAT-001.json
.agents/tasks/task-adversarial-ml-finalize/features/: FEAT-001.json
.github/workflows/: ci.yml
attack_mapping/: enricher.py
docs/: EXECUTIVE_REPORT.md  INCIDENT_REPORT.md  SUPPLY_CHAIN.md  TECHNICAL_REPORT.md
github-actions/adv-robustness-action/: action.yml
helm/adv-lab/: Chart.yaml  values.yaml
helm/adv-lab/templates/: deployment.yaml
scripts/: run_sandboxed.sh
src/adv_lab/: __init__.py  production.py
src/adv_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/adv_lab/attacks/: __init__.py  adaptive.py  api_sim.py  blackbox.py  chaining.py  constrained.py  cw.py  ensemble.py  evasion.py  fgsm.py  inference.py  inversion.py  llm.py  model_stealing.py  non_classification.py  norms.py  param_search.py  pgd.py  physical.py  poisoning.py  universal.py
src/adv_lab/ci/rego/: robustness.rego
src/adv_lab/defenses/: __init__.py  adversarial_training.py  detection.py
src/adv_lab/eval/: __init__.py  benchmark_verify.py  certified.py  ci_signing.py  harness.py  robustbench_loader.py  transferability.py
tests/: conftest.py  test_adaptive.py  test_api_sim.py  test_attack_mapping.py  test_attacks.py  test_benchmark_verify.py  test_blackbox.py  test_certified.py  test_chaining.py  test_ci_signing.py  test_constrained.py  test_cw.py  test_ensemble.py  test_evasion.py  test_fgsm.py  test_harness.py  test_inference.py  test_inversion.py  test_llm.py  test_model_stealing.py  test_non_classification.py  test_norms.py  test_param_search.py  test_pgd.py  test_physical.py  test_poisoning.py  test_robustbench_loader.py  test_transferability.py  test_universal.py
