[project]
name = "adv-lab"
version = "1.0.0"
description = "Adversarial robustness evaluation platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Pooja Kira", email = "poojakiranbhardwaj@gmail.com"}]
dependencies = [
    "numpy",
    "torch",
    "torchvision",
    "requests"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "bandit",
    "pip-audit",
    "pytest-cov"
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/adv_lab --cov-fail-under=15"
addopts = "--cov=src/adv_lab --cov-fail-under=15"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "B"]
ignore = [
    "W293",  # blank line whitespace - docstrings
    "B008",  # function call in default arg - ML convention
    "E501",  # line too long - production.py
    "F821",  # undefined name - placeholder KMS code
    "F401",  # unused import - some conditional imports
]
